Fixed margin collapse issue with the button in the class times boxes and positioned it correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,6 @@ h1, h2 {
     background: rgba(201, 18, 243);
     border: 1px solid white;
     color: white;
-    margin-top: 50px;
     padding: 10px 10px;
     border-radius: 5px;
     font-size: x-large;
@@ -226,17 +225,16 @@ hr {
     background-color: rgba(201, 18, 243, 0.7);
     width: 300px;
     height: 480px;
-    padding: 20px 0 0 0;
+    padding: 20px 0 10px 0;
     text-align: center;
     border: 2px solid white;
     border-radius: 20px;
-    box-sizing: border-box;
 }
 
 #class-times h2 {
     color:#fafafa;
     font-size: xx-large;
-    margin: 10px auto;
+    margin: 10px 5px;
 }
 
 #class-times h3 {
@@ -249,6 +247,11 @@ hr {
     border-top: 2px solid #fafafa;
     width: 80%;
     margin: 5px auto;
+}
+
+#class-times a {
+    display: inline-block;
+    margin: 20px;
 }
 
 footer {
